<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_diary"
        android:icon="@drawable/ic_nav_diary"
        android:title="@string/nav_diary" />

    <item
        android:id="@+id/nav_scan"
        android:icon="@drawable/ic_nav_scan"
        android:title="@string/nav_scan" />

    <item
        android:id="@+id/nav_suggestions"
        android:icon="@drawable/ic_nav_suggestions"
        android:title="@string/nav_suggestions" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
